2002-11-13  Gary Thomas  <gthomas@ecoscentric.com>

	* cdl/hal.cdl: Add CDL control over DATA cache startup mode.

2002-09-11  Mark Salter  <msalter@redhat.com>

	* include/hal_if.h: Add __COMMCTL_ENABLE_LINE_FLUSH and
	__COMMCTL_DISABLE_LINE_FLUSH.

2002-08-29  Mark Salter  <msalter@redhat.com>

	* include/generic-stub.h: Add defines for Z packet types.
	* src/bplist-dynamic.c: Add support for deferred hardware breakpoint
	and watchpoint insertion/deletion. This gets around gdb problem where
	gdb tries accessing watched memory before removing watchpoint.
	* src/generic-stub.c (__process_packet): Ditto.
	* include/hal_stub.h: Ditto.

2002-05-23  Jesper Skov  <jskov@redhat.com>

	* cdl/hal.cdl: Don't build tests that are not applicable with the
	current configuration.
	Added CYGINT_HAL_TESTS_NO_CACHES which allows cache tests to be
	suppressed.

2002-05-13  Jesper Skov  <jskov@redhat.com>

	* cdl/hal.cdl: Removed
	CYGINT_HAL_VIRTUAL_VECTOR_SUPPORT_NOT_GUARANTEED option and its
	dependencies.

2002-05-02  Nick Garnett  <nickg@redhat.com>

	* doc/hal.sgml: Added description of HAL_DELAY_US().

	* doc/porting.sgml: Expanded section on architecture porting.

2002-04-30  Jonathan Larmour  <jlarmour@redhat.com>

	* src/gdb-fileio.c (cyg_hal_gdbfileio_process_F_packet): Reset
	retcode/errno/ctrlc status every F packet.

2002-04-23  Jesper Skov  <jskov@redhat.com>

	* doc/porting.sgml: Fix some typos.

2002-04-22  Jonathan Larmour  <jlarmour@redhat.com>

	* include/generic-stub.h: Prototype __getpacket().
	* src/generic-stub.c: Rename getpacket() -> __getpacket(),
	remcomInBuffer -> __remcomInBuffer, and
	remcomOutBuffer -> __remcomOutBuffer throughout file, and export
	them (i.e. not file local).
	(__process_packet): Handle $F packets file I/O protocol responses.

	* src/gdb-fileio.c: New file to implement file I/O operations over
	the GDB remote protocol.
	* src/gdb-fileio.h: New file. Header for above.

2002-03-15  Nick Garnett  <nickg@redhat.com>
